--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/acmeProd
+    url: jdbc:mysql://localhost:3306/acmeProd?useTimezone=true&serverTimezone=UTC
     username: root
     password: 1234
   jpa:
