--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -3,6 +3,7 @@ spring:
     url: jdbc:mysql://localhost:3306/acmeProd?useTimezone=true&serverTimezone=UTC
     username: root
     password: 1234
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
